--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -4,7 +4,7 @@
 <head>
     <script src="/scripts/script.js"></script>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../output.css" />
+    <link rel="stylesheet" href="/output.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
@@ -23,9 +23,8 @@
         </div>
 
         <!--Post Content-->
-
         <section class="py-3 justify-center items-center flex min-h-[55vh]">
-            <div class="max-w-md md:min-w-[50%]">
+            <div id="loginBox" class="max-w-md md:min-w-[50%]">
                 <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg p-8">
                     <form class="space-y-6 text-gray-900">
                         <div>
@@ -35,7 +34,7 @@
                             </label>
                             <input
                                 class="w-full px-4 py-2 rounded-lg border border-gray-400 hover:bg-gray-100 hover:dark:bg-gray-200"
-                                id="username">
+                                id="username" placeholder="Username">
                         </div>
                         <div>
                             <label class="block font-bold mb-2 text-gray-900 dark:text-white text-center"
@@ -44,7 +43,7 @@
                             </label>
                             <input
                                 class="w-full px-4 py-2 rounded-lg border border-gray-400 hover:bg-gray-100 hover:dark:bg-gray-200"
-                                id="password">
+                                id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;">
                         </div>
                         <div>
                             <button
