--- a/site/pages/secrets/secret.html
+++ b/site/pages/secrets/secret.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="/scripts/script.js" async="false"></script>
+    <script src="/scripts/script.js"></script>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/output.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,23 +12,21 @@
 
 <body class="bod">
     <div id="navbar-placeholder"></div>
-
     <!--Container-->
+
     <main class="mainContent">
+
 
         <!--Title-->
         <div>
-            <h1 class="pageTitle">404 Not Found</h1>
+            <h1 class="pageTitle">SuperSecret</h1>
         </div>
 
-        <div class="text-center items-center py-8">
-            <img src="/images/404.png" alt="Sad spuder" class="h-auto max-w md:max-w-xl mx-auto">
-            <p class="text-xl font-bold pt-8"><a class="p-link" href="/">Back to the front page</a></p>
-        </div>
+        <!--/ Post Content-->
 
     </main>
-    <!--/container-->
 
+    <!--/container-->
     <div id="footer-placeholder"></div>
 </body>
 
