--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -4,7 +4,7 @@
 <head>
     <script src="/scripts/script.js"></script>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/output.css" />
+    <link rel="stylesheet" href="/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
