refactor login js code, clean up, add feedback after successful login

--- a/site/index.html
+++ b/site/index.html
@@ -68,6 +68,7 @@
 
 	<!--/container-->
 	<div id="footer-placeholder"></div>
+	<div id="auth-success" class="fixed w-full z-10 bottom-0 bg-green-200 px-6 py-2 sm:px-3.5 opacity-0 leading-6 text-center text-gray-900 target:animate-fade">Authentication successful!</div>
 </body>
 
 </html>
