add 401 page, start server work for user authentication

--- a/site/401.html
+++ b/site/401.html
@@ -18,11 +18,11 @@
 
         <!--Title-->
         <div>
-            <h1 class="pageTitle">404 Not Found</h1>
+            <h1 class="pageTitle">401 Unauthorized</h1>
         </div>
-
         <div class="text-center items-center py-8">
-            <img src="/images/404.webp" alt="Sad spuder" class="h-auto max-w md:max-w-xl mx-auto">
+            <p class="text-lg">You do not have access to this page.</p>
+            <img src="/images/401.webp" alt="No entry hand sign" class="h-auto max-w md:max-w-xl mx-auto">
             <p class="text-xl font-bold pt-8"><a class="p-link" href="/">Back to the front page</a></p>
         </div>
 
